[package]
name = "casterson"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_cast = "0.15"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
tokio-util = "0.2"
bytes = "0.5"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.1", features = ["serde"]}
clap = "2.33"
crossbeam = "0.7"
structopt = "0.3"
walkdir = "2.2"
# prost = "0.5"
# prost-derive = "0.5"
# tonic = "0.1.0-beta.1"


# [build-dependencies]
# tonic-build = "0.1.0-beta.1"